--- a/CRUD/index.html
+++ b/CRUD/index.html
@@ -8,7 +8,7 @@
       type="image/x-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CRUD</title>
+    <title>Gerenciador de Eventos</title>
   </head>
   <body>
     <div id="root"></div>
